--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <meta name="theme-color" content="rgb(31, 32, 36)">
+    <meta name='theme-color' content='rgb(31, 32, 36)'>
     <link rel='stylesheet' href='./css/style.css'>
     <link rel='stylesheet' href='./css/media.css'>
     <link rel='stylesheet' href='./css/libs/libs.css'>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css2?family=Ubuntu&display=swap' rel='stylesheet'>
     <title>portfolio-nemesis0101</title>
 </head>
 
@@ -50,43 +50,44 @@
                     <div class='info-box__title'>portfolio :</div>
                     <button href='#' class='portfolio-button'>todo</button>
                     <button href='#' class='portfolio-button'>giftstore</button>
-                    <div class="portfolio-card-overlay">
-                        <div class="portfolio-card">
-                            <img src="./img/./project-todo.jpg" alt="project-todo-screenshot" class="portfolio-card__img">
-                            <div class="portfolio-card__description-title">Description</div>
-                            <div class="portfolio-card__description">Taskatka is a website designed for note taking.</div>
-                            <div class="portfolio-card__tech-title">Technologies</div>
-                            <ul class="portfolio-card__tech-list">
-                                <li class="portfilio-card__tech-list-item">HTML 5</li>
-                                <li class="portfilio-card__tech-list-item">CSS 3</li>
-                                <li class="portfilio-card__tech-list-item">JavaScript</li>
+                    <div class='portfolio-card-overlay'>
+                        <div class='portfolio-card'>
+                            <img src='./img/./project-todo.jpg' alt='project-todo-screenshot' class='portfolio-card__img'>
+                            <div class='portfolio-card__description-title'>Description</div>
+                            <div class='portfolio-card__description'>Taskatka is a website designed for note taking.</div>
+                            <div class='portfolio-card__tech-title'>Technologies</div>
+                            <ul class='portfolio-card__tech-list'>
+                                <li class='portfilio-card__tech-list-item'>HTML 5</li>
+                                <li class='portfilio-card__tech-list-item'>CSS 3</li>
+                                <li class='portfilio-card__tech-list-item'>JavaScript</li>
                             </ul>
-                            <div class="portfolio-card__actions">
-                                <span class="portfolio-card__link-title">visit site<a href="https://nemesis0101.github.io/project-todo/" class="portfolio-card__link">todo</a></span>
-                                <button class="portfolio-card-button">
-                                    <svg class="portfolio-card-button__img" width="15" height="15" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.19999 0.19L4.49999 3.49L7.79999 0.2C7.9314 0.0663 8.11269 -0.00620003 8.29999 -2.5495e-08C8.67609 0.0243 8.97569 0.3239 8.99999 0.7C9.00179 0.8806 8.92949 1.0541 8.79999 1.18L5.48999 4.5L8.79999 7.82C8.92949 7.9459 9.00179 8.1194 8.99999 8.3C8.97569 8.6761 8.67609 8.9757 8.29999 9C8.11269 9.0062 7.9314 8.9337 7.79999 8.8L4.49999 5.51L1.20999 8.8C1.07859 8.9337 0.897295 9.0062 0.709995 9C0.326495 8.98 0.0199946 8.6735 -5.39684e-06 8.29C-0.0018054 8.1094 0.0704947 7.9359 0.199995 7.81L3.50999 4.5L0.189995 1.18C0.0640947 1.0524 -0.0045054 0.8792 -5.39684e-06 0.7C0.0242946 0.3239 0.323895 0.0243 0.699995 -2.5495e-08C0.885795 -0.00880003 1.06689 0.06 1.19999 0.19Z"/>
+                            <div class='portfolio-card__actions'>
+                                <span class='portfolio-card__link-title'>visit site<a href='https://nemesis0101.github.io/project-todo/' class='portfolio-card__link' target='_blank'>todo</a></span>
+                                <button class='portfolio-card-button'>
+                                    <svg class='portfolio-card-button__img' width='15' height='15' viewBox='0 0 9 9' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                        <path d='M1.19999 0.19L4.49999 3.49L7.79999 0.2C7.9314 0.0663 8.11269 -0.00620003 8.29999 -2.5495e-08C8.67609 0.0243 8.97569 0.3239 8.99999 0.7C9.00179 0.8806 8.92949 1.0541 8.79999 1.18L5.48999 4.5L8.79999 7.82C8.92949 7.9459 9.00179 8.1194 8.99999 8.3C8.97569 8.6761 8.67609 8.9757 8.29999 9C8.11269 9.0062 7.9314 8.9337 7.79999 8.8L4.49999 5.51L1.20999 8.8C1.07859 8.9337 0.897295 9.0062 0.709995 9C0.326495 8.98 0.0199946 8.6735 -5.39684e-06 8.29C-0.0018054 8.1094 0.0704947 7.9359 0.199995 7.81L3.50999 4.5L0.189995 1.18C0.0640947 1.0524 -0.0045054 0.8792 -5.39684e-06 0.7C0.0242946 0.3239 0.323895 0.0243 0.699995 -2.5495e-08C0.885795 -0.00880003 1.06689 0.06 1.19999 0.19Z'/>
                                     </svg>
                                 </button>
                             </div>
                         </div>
                     </div>
-                    <div class="portfolio-card-overlay">
-                        <div class="portfolio-card">
-                            <img src="./img/project-giftstore.jpg" alt="project-giftstore-screenshot" class="portfolio-card__img">
-                            <div class="portfolio-card__description-title">Description</div>
-                            <div class="portfolio-card__description">Landing page.</div>
-                            <div class="portfolio-card__tech-title">Technologies</div>
-                            <ul class="portfolio-card__tech-list">
-                                <li class="portfilio-card__tech-list-item">HTML 5</li>
-                                <li class="portfilio-card__tech-list-item">CSS 3</li>
-                                <li class="portfilio-card__tech-list-item">JavaScript</li>
+                    <div class='portfolio-card-overlay'>
+                        <div class='portfolio-card'>
+                            <img src='./img/project-giftstore.jpg' alt='project-giftstore-screenshot' class='portfolio-card__img'>
+                            <div class='portfolio-card__description-title'>Description</div>
+                            <div class='portfolio-card__description'>Landing page.</div>
+                            <div class='portfolio-card__tech-title'>Technologies</div>
+                            <ul class='portfolio-card__tech-list'>
+                                <li class='portfilio-card__tech-list-item'>HTML 5</li>
+                                <li class='portfilio-card__tech-list-item'>CSS 3</li>
+                                <li class='portfilio-card__tech-list-item'>JavaScript</li>
+                                <li class='portfilio-card__tech-list-item'>Design</li>
                             </ul>
-                            <div class="portfolio-card__actions">
-                                <span class="portfolio-card__link-title">visit site<a href="https://nemesis0101.github.io/project-giftstore/" class="portfolio-card__link">giftstore</a></span>
-                                <button class="portfolio-card-button">
-                                    <svg class="portfolio-card-button__img" width="15" height="15" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.19999 0.19L4.49999 3.49L7.79999 0.2C7.9314 0.0663 8.11269 -0.00620003 8.29999 -2.5495e-08C8.67609 0.0243 8.97569 0.3239 8.99999 0.7C9.00179 0.8806 8.92949 1.0541 8.79999 1.18L5.48999 4.5L8.79999 7.82C8.92949 7.9459 9.00179 8.1194 8.99999 8.3C8.97569 8.6761 8.67609 8.9757 8.29999 9C8.11269 9.0062 7.9314 8.9337 7.79999 8.8L4.49999 5.51L1.20999 8.8C1.07859 8.9337 0.897295 9.0062 0.709995 9C0.326495 8.98 0.0199946 8.6735 -5.39684e-06 8.29C-0.0018054 8.1094 0.0704947 7.9359 0.199995 7.81L3.50999 4.5L0.189995 1.18C0.0640947 1.0524 -0.0045054 0.8792 -5.39684e-06 0.7C0.0242946 0.3239 0.323895 0.0243 0.699995 -2.5495e-08C0.885795 -0.00880003 1.06689 0.06 1.19999 0.19Z"/>
+                            <div class='portfolio-card__actions'>
+                                <span class='portfolio-card__link-title'>visit site<a href='https://nemesis0101.github.io/project-giftstore/' class='portfolio-card__link' target='_blank'>giftstore</a></span>
+                                <button class='portfolio-card-button'>
+                                    <svg class='portfolio-card-button__img' width='15' height='15' viewBox='0 0 9 9' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                        <path d='M1.19999 0.19L4.49999 3.49L7.79999 0.2C7.9314 0.0663 8.11269 -0.00620003 8.29999 -2.5495e-08C8.67609 0.0243 8.97569 0.3239 8.99999 0.7C9.00179 0.8806 8.92949 1.0541 8.79999 1.18L5.48999 4.5L8.79999 7.82C8.92949 7.9459 9.00179 8.1194 8.99999 8.3C8.97569 8.6761 8.67609 8.9757 8.29999 9C8.11269 9.0062 7.9314 8.9337 7.79999 8.8L4.49999 5.51L1.20999 8.8C1.07859 8.9337 0.897295 9.0062 0.709995 9C0.326495 8.98 0.0199946 8.6735 -5.39684e-06 8.29C-0.0018054 8.1094 0.0704947 7.9359 0.199995 7.81L3.50999 4.5L0.189995 1.18C0.0640947 1.0524 -0.0045054 0.8792 -5.39684e-06 0.7C0.0242946 0.3239 0.323895 0.0243 0.699995 -2.5495e-08C0.885795 -0.00880003 1.06689 0.06 1.19999 0.19Z'/>
                                     </svg>
                                 </button>
                             </div>
@@ -103,17 +104,17 @@
                 </div>
                 <div class='info-box'>
                     <div class='info-box__title'>contacts :</div>
-                    <ul class="contacts">
-                        <li class="contacts__item"><a class='contacts__link' target='_blank' href='https://www.facebook.com/ermolovichartyom'><img class='contacts__img' src='./img/icons/facebook.svg' alt='facebook'></a></li>
-                        <li class="contacts__item"><a class='contacts__link' target='_blank' href='https://www.instagram.com/yaartiom/'><img class='contacts__img' src='./img/icons/instagram.svg' alt='instagram'></a></li>
-                        <li class="contacts__item"><a class='contacts__link' target='_blank' href='https://github.com/Nemesis0101'><img class='contacts__img' src='./img/icons/github.svg' alt='github'></a></li>
-                        <li class="contacts__item"><a class='contacts__link' target='_blank' href='https://telete.in/yaartiom'><img class='contacts__img' src='./img/icons/telegram.svg' alt='telegram'></a></li>
+                    <ul class='contacts'>
+                        <li class='contacts__item'><a class='contacts__link' target='_blank' href='https://www.facebook.com/ermolovichartyom'><img class='contacts__img' src='./img/icons/facebook.svg' alt='facebook'></a></li>
+                        <li class='contacts__item'><a class='contacts__link' target='_blank' href='https://www.instagram.com/yaartiom/'><img class='contacts__img' src='./img/icons/instagram.svg' alt='instagram'></a></li>
+                        <li class='contacts__item'><a class='contacts__link' target='_blank' href='https://github.com/Nemesis0101'><img class='contacts__img' src='./img/icons/github.svg' alt='github'></a></li>
+                        <li class='contacts__item'><a class='contacts__link' target='_blank' href='https://telete.in/yaartiom'><img class='contacts__img' src='./img/icons/telegram.svg' alt='telegram'></a></li>
                     </ul>
                 </div>
                 <div class='info-box'>
                     <div class='info-box__title'>resume :</div>
-                    <div class="desc">
-                       <a href="#" class="resume-link" download="">download</a>
+                    <div class='desc'>
+                       <a href='#' class='resume-link' download=''>download</a>
                     </div>
                 </div>
             </div>
@@ -125,8 +126,8 @@
 <main>
     <div class='stage'>
         <picture>
-            <source type="image/webp" srcset="./img/me.webp">
-            <img class='stage__img' src="./img/me.png" alt="me">
+            <source type='image/webp' srcset='./img/me.webp'>
+            <img class='stage__img' src='./img/me.png' alt='me'>
         </picture>
         <video autoplay muted loop src='./video/rose.mp4' class='stage__video'></video>
     </div>
