add loader, fix video bug(safari)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>portfolio-nemesis0101</title>
 </head>
 <body>
+
+<div class="preloader"><span class='preloader__title'>loading...</span></div>
  
 <header class='menu'>
     <div class='burger-menu'>
@@ -25,7 +27,7 @@
         <source type='image/webp' srcset='./img/me.webp'>
         <img class='stage__img' src='./img/me.png' alt='me'>
     </picture>
-    <video autoplay muted loop src='./video/rose.mp4' class='stage__video'></video>
+    <video autoplay muted loop playsinline src='./video/rose.mp4' class='stage__video'></video>
     <div class='info'>
         <section class='info-box'>
             <h1 class='info-box__title'>about :</h1>
