--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class='burger-menu'>
         <div class='burger-menu__line burger-menu__line-1'></div>
         <div class='burger-menu__line burger-menu__line-2'></div>
+        <div class='burger-menu__line burger-menu__line-3'></div>
     </div>
     <div class='menu__title'>info</div>
 </header>
