--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
             </section>
             <section class="info-box">
                 <h2 class="info-box__title">portfolio :</h2>
-                <button class="portfolio-button">flower-shop</button>
-                <button class="portfolio-button">giftstore</button>
-                <button class="portfolio-button">todo</button>
+                <div class="portfolio-buttons">
+                    <button class="portfolio-button portfolio-buttons__portfolio-button">flower-shop</button>
+                    <button class="portfolio-button portfolio-buttons__portfolio-button">giftstore</button>
+                    <button class="portfolio-button portfolio-buttons__portfolio-button">todo</button>
+                </div>
                 <div class="portfolio-card-overlay">
                     <div class="portfolio-card">
                         <img src="./img/./project-flower-shop.jpg" alt="project-flower-shop-screenshot"
