add resume link

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
             <section class="info-box">
                 <h2 class="info-box__title">resume :</h2>
                 <div class="desc">
-                    <a href="#" class="resume-link" download="">download</a>
+                    <a target="_blank" href="https://hh.ru/resume/f7f60139ff07f656690039ed1f74785a4f4151"
+                        class="resume-link" download="">check</a>
                 </div>
             </section>
         </div>
