--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="desc">
                     Hello. My name's Artyom. I'm living in Moscow. I'm
                     interested in web-development and web industry in
-                    general. In the future i want to be a React developer.
+                    general. In the future i want to be a Vue/React developer.
                 </div>
             </section>
             <section class="info-box">
