--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
             <section class="info-box">
                 <h1 class="info-box__title">about :</h1>
                 <div class="desc">
-                    Hello. My name's Artyom. I'm living in Moscow. I'm
-                    interested in web-development and web industry in
-                    general. In the future i want to be a Vue/React developer.
+                    Hello. My name's Artyom. I live in Moscow. I'm interested in front-end programming and web industry
+                    in general. In the future, I want to become a Vue/React developer.
                 </div>
             </section>
             <section class="info-box">
