--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="portfolio info__portfolio">
                 <section class="portfolio-info">
                     <h2 class="portfolio-info__title">ToDo app</h2>
-                    <p class="portfolio-info__descr">Taskatka is a website designed for note taking.</p>
+                    <p class="portfolio-info__descr">Website for note taking.</p>
                     <ul class="portfolio-info__list">
                         <li class="portfolio-info__list-item">java script</li>
                         <li class="portfolio-info__list-item">html 5</li>
