add new project

--- a/index.html
+++ b/index.html
@@ -13,97 +13,112 @@
 </head>
 
 <body>
-    <div class="preloader">
-        <div class="preloader__inner">
-            <div class="preloader__title">Welcome!</div>
-            <div class="preloader__title">loading...please wait</div>
+<div class="preloader">
+    <div class="preloader__inner">
+        <div class="preloader__title">Welcome!</div>
+        <div class="preloader__title">loading...please wait</div>
+    </div>
+</div>
+
+<header class="menu">
+    <div class="burger-menu">
+        <div class="burger-menu__line burger-menu__line-1"></div>
+        <div class="burger-menu__line burger-menu__line-2"></div>
+        <div class="burger-menu__line burger-menu__line-3"></div>
+    </div>
+    <div class="menu__title">info</div>
+</header>
+
+<main class="stage">
+    <picture>
+        <source type="image/webp" srcset="./img/me.webp">
+        <img class="stage__img" src="./img/me.png" alt="me">
+    </picture>
+    <video autoplay muted loop playsinline src="./video/rose.mp4" class="stage__video"></video>
+    <div class="info">
+        <div class="portfolio info__portfolio">
+            <section class="portfolio-info">
+                <h2 class="portfolio-info__title">Hotel booking (in progress)</h2>
+                <p class="portfolio-info__descr">Website for hotel booking.</p>
+                <ul class="portfolio-info__list">
+                    <li class="portfolio-info__list-item">html 5</li>
+                    <li class="portfolio-info__list-item">css 3</li>
+                    <li class="portfolio-info__list-item">java script</li>
+                </ul>
+                <a href="https://nemesis0101.github.io/project-hotel-booking/" target="_blank"
+                   class="portfolio-info__link">visit
+                    site</a>
+            </section>
+            <img src="./img/project-hotel-booking.jpg" alt="hotel booking" class="portfolio__img">
+        </div>
+        <div class="portfolio info__portfolio">
+            <section class="portfolio-info">
+                <h2 class="portfolio-info__title">English study app</h2>
+                <p class="portfolio-info__descr">Website for learning new english words.</p>
+                <ul class="portfolio-info__list">
+                    <li class="portfolio-info__list-item">java script</li>
+                    <li class="portfolio-info__list-item">html 5</li>
+                    <li class="portfolio-info__list-item">css 3</li>
+                    <li class="portfolio-info__list-item">design</li>
+                </ul>
+                <a href="https://nemesis0101.github.io/project-english-study/" target="_blank"
+                   class="portfolio-info__link">visit
+                    site</a>
+            </section>
+            <img src="./img/project-english-learn.jpg" alt="english learn app" class="portfolio__img">
+        </div>
+        <div class="portfolio info__portfolio">
+            <section class="portfolio-info">
+                <h2 class="portfolio-info__title">ToDo app</h2>
+                <p class="portfolio-info__descr">Website for note taking.</p>
+                <ul class="portfolio-info__list">
+                    <li class="portfolio-info__list-item">java script</li>
+                    <li class="portfolio-info__list-item">html 5</li>
+                    <li class="portfolio-info__list-item">css 3</li>
+                    <li class="portfolio-info__list-item">design</li>
+                </ul>
+                <a href="https://nemesis0101.github.io/project-todo/" target="_blank"
+                   class="portfolio-info__link">visit site</a>
+            </section>
+            <img src="./img/project-todo.jpg" alt="todo app" class="portfolio__img">
+        </div>
+        <div class="portfolio info__portfolio">
+            <section class="portfolio-info">
+                <h2 class="portfolio-info__title">Flower shop</h2>
+                <p class="portfolio-info__descr">Multi-page site. Mobile first.</p>
+                <ul class="portfolio-info__list">
+                    <li class="portfolio-info__list-item">html 5</li>
+                    <li class="portfolio-info__list-item">css 3</li>
+                    <li class="portfolio-info__list-item">java script</li>
+                </ul>
+                <a href="https://nemesis0101.github.io/project-flower-shop/" target="_blank"
+                   class="portfolio-info__link">visit
+                    site</a>
+            </section>
+            <img src="./img/project-flower-shop.jpg" alt="flower shop site" class="portfolio__img">
+        </div>
+        <div class="portfolio info__portfolio">
+            <section class="portfolio-info">
+                <h2 class="portfolio-info__title">Gift store</h2>
+                <p class="portfolio-info__descr">Gift store landing page.</p>
+                <ul class="portfolio-info__list">
+                    <li class="portfolio-info__list-item">html 5</li>
+                    <li class="portfolio-info__list-item">css 3</li>
+                    <li class="portfolio-info__list-item">java script</li>
+                </ul>
+                <a href="https://nemesis0101.github.io/project-giftstore/" target="_blank"
+                   class="portfolio-info__link">visit site</a>
+            </section>
+            <img src="./img/project-giftstore.jpg" alt="gift store site" class="portfolio__img">
         </div>
     </div>
+</main>
 
-    <header class="menu">
-        <div class="burger-menu">
-            <div class="burger-menu__line burger-menu__line-1"></div>
-            <div class="burger-menu__line burger-menu__line-2"></div>
-            <div class="burger-menu__line burger-menu__line-3"></div>
-        </div>
-        <div class="menu__title">info</div>
-    </header>
+<footer class="footer">
+    <h3 class="footer__title">created by Nemesis0101</h3>
+</footer>
 
-    <main class="stage">
-        <picture>
-            <source type="image/webp" srcset="./img/me.webp">
-            <img class="stage__img" src="./img/me.png" alt="me">
-        </picture>
-        <video autoplay muted loop playsinline src="./video/rose.mp4" class="stage__video"></video>
-        <div class="info">
-            <div class="portfolio info__portfolio">
-                <section class="portfolio-info">
-                    <h2 class="portfolio-info__title">English study app</h2>
-                    <p class="portfolio-info__descr">Website for learning new english words.</p>
-                    <ul class="portfolio-info__list">
-                        <li class="portfolio-info__list-item">java script</li>
-                        <li class="portfolio-info__list-item">html 5</li>
-                        <li class="portfolio-info__list-item">css 3</li>
-                        <li class="portfolio-info__list-item">design</li>
-                    </ul>
-                    <a href="https://nemesis0101.github.io/project-english-study/" target="_blank"
-                        class="portfolio-info__link">visit
-                        site</a>
-                </section>
-                <img src="./img/project-english-learn.jpg" alt="english learn app" class="portfolio__img">
-            </div>
-            <div class="portfolio info__portfolio">
-                <section class="portfolio-info">
-                    <h2 class="portfolio-info__title">ToDo app</h2>
-                    <p class="portfolio-info__descr">Website for note taking.</p>
-                    <ul class="portfolio-info__list">
-                        <li class="portfolio-info__list-item">java script</li>
-                        <li class="portfolio-info__list-item">html 5</li>
-                        <li class="portfolio-info__list-item">css 3</li>
-                        <li class="portfolio-info__list-item">design</li>
-                    </ul>
-                    <a href="https://nemesis0101.github.io/project-todo/" target="_blank"
-                        class="portfolio-info__link">visit site</a>
-                </section>
-                <img src="./img/project-todo.jpg" alt="todo app" class="portfolio__img">
-            </div>
-            <div class="portfolio info__portfolio">
-                <section class="portfolio-info">
-                    <h2 class="portfolio-info__title">Flower shop</h2>
-                    <p class="portfolio-info__descr">Multi-page site. Mobile first.</p>
-                    <ul class="portfolio-info__list">
-                        <li class="portfolio-info__list-item">html 5</li>
-                        <li class="portfolio-info__list-item">css 3</li>
-                        <li class="portfolio-info__list-item">java script</li>
-                    </ul>
-                    <a href="https://nemesis0101.github.io/project-flower-shop/" target="_blank"
-                        class="portfolio-info__link">visit
-                        site</a>
-                </section>
-                <img src="./img/project-flower-shop.jpg" alt="flower shop site" class="portfolio__img">
-            </div>
-            <div class="portfolio info__portfolio">
-                <section class="portfolio-info">
-                    <h2 class="portfolio-info__title">Gift store</h2>
-                    <p class="portfolio-info__descr">Gift store landing page.</p>
-                    <ul class="portfolio-info__list">
-                        <li class="portfolio-info__list-item">html 5</li>
-                        <li class="portfolio-info__list-item">css 3</li>
-                        <li class="portfolio-info__list-item">java script</li>
-                    </ul>
-                    <a href="https://nemesis0101.github.io/project-giftstore/" target="_blank"
-                        class="portfolio-info__link">visit site</a>
-                </section>
-                <img src="./img/project-giftstore.jpg" alt="gift store site" class="portfolio__img">
-            </div>
-        </div>
-    </main>
-
-    <footer class="footer">
-        <h3 class="footer__title">created by Nemesis0101</h3>
-    </footer>
-
-    <script src="./js/main.js"></script>
+<script src="./js/main.js"></script>
 </body>
 
 </html>
